test/files/neg/t7757b.check
t7757b.scala:2: error: expected start of definition
@annot2
       ^
1 error
